cognito feature added

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,13 @@
     <button type="submit">Create User</button>
   </form>
   <div id="registerMessage"></div>
+  
+  <h3>Confirm Account</h3>
+<input id="confirmUsername" placeholder="Username">
+<input id="confirmCode" placeholder="Code">
+<button onclick="confirmUser()">Confirm</button>
+<div id="confirmMessage"></div>
+
 </div>
 
 
